# flask-mux

./: .gitignore  LICENSE  README.rst  requirements-dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
docs/source/: api.rst  conf.py  contributing.rst  flask_mux.rst  guide.rst  index.rst  installation.rst  modules.rst  quickstart.rst  tests.rst
docs/source/api/: index.rst
docs/source/example/: flask-mux.rst  flask-only.rst  index.rst  middlewares.rst
docs/source/examples/: flask-mux.rst  flask-only.rst  index.rst
flask_mux/: __init__.py  errors.py  mux.py  router.py
flask_router/: __init__.py  http_router.py  router.py
requirements/: docs.txt
testing/: test_router.py
testing/test_cases/: decorator.py  middlewares.py  router.py
tests/: common.py  test_base.py  test_blueprints.py  test_decorator.py  test_decorator_cases.py  test_decorator_middlewares.py  test_delete.py  test_get.py  test_handle.py  test_handle_middlewares.py  test_mws.py  test_mws_cases.py  test_patch.py  test_post.py  test_put.py  test_router.py  testcases.py
tests/test_cases/: common.py  test_decorator.py  test_mws.py
