[metadata]
name = Flask-Mux
version = 0.0.1
description = Minimal routing extension for Flask
url = https://github.com/ElMehdi19/flask-mux
project_urls =
    Documentation = https://flask-mux.readthedocs.com
    Source Code = https://github.com/ElMehdi19
author = El Mehdi Rami
author_email = elmehdirami5@gmail.com
licence = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content


[options]
packages = find:
python_requires = >= 3.6
install_requires =
    flask

[options.packages.find]
exclude =
    tests*
    testing*