[metadata]
name = Flask-Mux
version = 0.0.3
description = Minimal routing extension for Flask
long_description = file: README.rst
url = https://github.com/ElMehdi19/flask-mux
project_urls =
    Documentation = https://flask-mux.readthedocs.com
    Source Code = https://github.com/ElMehdi19
author = El Mehdi Rami
author_email = elmehdirami5@gmail.com
licence = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = find:
python_requires = >= 3.6
install_requires =
    flask

[options.packages.find]
exclude =
    tests*
    testing*
